# hausa-qa-toolkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  evaluation.md  provenance.md  release.md
fixtures/: cli-demo.tsv  evaluation.json  glossary.tsv
scripts/: evaluate.py
src/hausaqa/: __init__.py  cli.py  engine.py  evaluation.py  models.py  orthography.py  placeholders.py  terminology.py
src/hausaqa/io/: __init__.py  delimited.py  json_pairs.py  xliff.py
tests/: test_cli.py  test_engine.py  test_evaluation.py  test_io.py  test_models.py  test_orthography.py  test_placeholders.py  test_terminology.py
