[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hausaqa"
version = "0.1.0"
description = "Clean-room Hausa localization quality assurance toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Abba Bello Kanwa"}]
keywords = ["hausa", "localization", "quality-assurance", "xliff"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
hausaqa = "hausaqa.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["hausaqa"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 85
omit = ["src/hausaqa/cli.py", "src/hausaqa/io/*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
